fixed z-index

--- a/src/components/modals/ModalWindow.css
+++ b/src/components/modals/ModalWindow.css
@@ -78,7 +78,7 @@
 .modal_body > .x_button {
   top: -1rem;
   right: -1rem;
-  z-index: 10;
+  z-index: 5;
 }
 
 @media only screen and (min-width: 600px) {
